css/amazing.css
#amazing-container{
  left: 300px;
  top: 445px;
  width: 1052px;
  height: 140px;
  position: absolute;
  opacity: 1;
  transition: top 100ms 2000ms linear, opacity 100ms 2000ms linear;
}

#amazing-text{
  float: left;
  font-size: 103px;
  width: 0%;
  top: 50%;
  opacity: 0;
  position: relative;
  overflow: hidden;
  transform: translateY(-50%);
  transition: width 300ms 500ms linear, opacity 300ms 500ms;
}

#amazing-logo{
  position: absolute;
  left: 0px;
  height: 83%;
  top: 50%;
  transform: translateY(-50%) scale(0, 0);
  transition: transform 200ms 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275), left 300ms 500ms linear;
}

#amazing-text.extend{
  width: 100%;
  opacity: 1;
}

#amazing-logo.shown{
  transform: translateY(-50%) scale(1, 1);
  left: 930px;
}

#amazing-container.hide{
  top: 300px;
  opacity: 0;
}

